<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="109dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/AddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addressText"
        android:layout_alignStart="@+id/addressText"
        android:layout_marginBottom="51dp"
        android:labelFor="@+id/addressText"
        android:text="@string/location"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/SpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressText"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/SpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SpeedText"
        android:layout_alignStart="@+id/SpeedText"
        android:layout_marginBottom="57dp"
        android:labelFor="@+id/SpeedText"
        android:text="@string/speed"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/save_user_info" />

</RelativeLayout>